globus-gass-copy (9.15-2+gt6.@distro@) @distro@; urgency=low

  * Fix test on jessie pbuilder

 -- Globus Toolkit <support@globus.org>  Wed, 15 Apr 2015 17:33:37 -0400

globus-gass-copy (9.15-1+gt6.@distro@) @distro@; urgency=low

  * Clarify documentation of stack options

 -- Globus Toolkit <support@globus.org>  Wed, 08 Apr 2015 15:32:07 -0400

globus-gass-copy (9.14-1+gt6.@distro@) @distro@; urgency=low

  * Fix user-specified data channel stack handling

 -- Globus Toolkit <support@globus.org>  Wed, 08 Apr 2015 12:57:24 -0400

globus-gass-copy (9.13-1+gt6.@distro@) @distro@; urgency=low

  * doxygen fixes

 -- Globus Toolkit <support@globus.org>  Mon, 03 Nov 2014 13:11:55 -0500

globus-gass-copy (9.12-3+gt6.@distro@) @distro@; urgency=low

  * Add build depdendency on OpenSSL and liburi-perl

 -- Globus Toolkit <support@globus.org>  Wed, 29 Oct 2014 20:04:25 -0400

globus-gass-copy (9.12-1+gt6.@distro@) @distro@; urgency=low

  * Include more manpages for API
  * Fix some Doxygen issues
  * Quiet some autoconf/automake warnings

 -- Globus Toolkit <support@globus.org>  Mon, 22 Sep 2014 15:29:58 -0400

globus-gass-copy (9.11-1+gt6.@distro@) @distro@; urgency=low

  * Merge fixes from ellert-globus_6_branch

 -- Globus Toolkit <support@globus.org>  Fri, 22 Aug 2014 16:29:28 -0400

globus-gass-copy (9.10-3+gt6.@distro@) @distro@; urgency=low

  * Fix Source path

 -- Globus Toolkit <support@globus.org>  Wed, 20 Aug 2014 15:42:39 -0400

globus-gass-copy (9.10-2+gt6.@distro@) @distro@; urgency=low

  * Rename dbg packages

 -- Globus Toolkit <support@globus.org>  Wed, 18 Jun 2014 14:38:43 -0400

globus-gass-copy (9.10-1+gt6.@distro@) @distro@; urgency=low

  * Merge changes from Mattias Ellert

 -- Globus Toolkit <support@globus.org>  Mon, 09 Jun 2014 14:39:40 -0400

globus-gass-copy (9.9-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes

 -- Globus Toolkit <support@globus.org>  Thu, 24 Apr 2014 20:00:13 -0400
