@@ -1,3 +1,10 @@
+globus-gass-copy (9.16-1+gt6.@distro@) @distro@; urgency=low
+
+  * Improve error handling
+  * Fix non-terminated string
+
+ -- Globus Toolkit <support@globus.org>  Wed, 01 Jul 2015 16:02:34 -0400
+
 globus-gass-copy (9.15-2+gt6.@distro@) @distro@; urgency=low
 
   * Fix test on jessie pbuilder
